Spacing issues

--- a/force-app/main/default/lwc/nD_DynamicSection/nD_DynamicSection.css
+++ b/force-app/main/default/lwc/nD_DynamicSection/nD_DynamicSection.css
@@ -51,7 +51,6 @@
     font-size: 0.75rem;
     color: #444444;       
     font-weight: 800;     
-    text-transform: uppercase;
     letter-spacing: 0.5px;
     margin-bottom: 2px;
 }
